# macommune

./: .gitignore  Dockerfile  README.md  config.ini.sample  docker-compose.yml  docker-entrypoint.sh  macommune.py  nightly-update.py  nightly_update.py  pywiki_light.py  requirements.txt  upgrade_prod.sh
backend/: basic_data.py  database.mwb  database.mwb.bak  dbtest.py  extract-wikipedia-categories.py  liste_communes.py  macommune.py  osm-export-get-qid.py  pywiki_light.py  requirements.txt  update.py  update_aliases.py  update_average.py  update_evaluations.py  update_sections.py
backend/resources/: extract-osm-fix.ods  temp
conf/: config.dev.ini
frontend/: composer.json
frontend/var/: france-communes-data.csv
macommune/: settings.py  urls.py
mc_frontend/: apps.py  constants.py  models.py  urls.py  views.py
suggestd/: ChangeLog  Makefile  suggestd.conf
suggestd/src/: Makefile  Makefile.am  conf_parser.c  conf_parser.h  db_mysql.h  db_sqlite3.h  fetcher.c  json.h  log.c  log.h  node.c  node.h  pages.h  stringlist.c  stringlist.h  suggestd  tree.c
suggestd/src/.deps/: conf_parser.Po  db_mysql.Po  fetcher.Po  global.Po  item.Po  log.Po  node.Po
suggestd_0.13/: Makefile.in  config.status  configure  configure.ac
suggestd_0.13/doc/: suggestd.1
suggestd_0.13/src/: Makefile.in  args.c  args.h  db_mysql.c  db_sqlite3.c  fetcher.h  global.c  global.h  http.c  http.h  item.c  item.h  json.c  suggestd.c  tree.h
suggestd_0.13/src/.deps/: args.Po  db_sqlite3.Po  http.Po  json.Po  stringlist.Po  suggestd.Po  tree.Po
webroot/: manage.py  requirements.txt
(+87 files in other folders)
